# nectere

./: .gitignore  README.md  nectere.code-workspace  package.json  path.code-workspace
docs/: next.config.js  package-lock.json  package.json  tailwind.config.ts
docs/src/app/: globals.css  layout.tsx  page.tsx
docs/src/app/advanced/: page.tsx
docs/src/app/ai/: page.tsx
docs/src/app/evm/: page.tsx
docs/src/app/getting-started/: page.tsx
docs/src/app/plugins/: page.tsx
docs/src/app/solana/: page.tsx
docs/src/components/: CodeBlock.tsx  Header.tsx  Sidebar.tsx
python/: README.md  pyproject.toml
python/examples/: README.md
python/examples/langchain/web3/: README.md  example.py  pyproject.toml
python/src/adapters/langchain/: README.md  pyproject.toml
python/src/adapters/langchain/nectere_adapters/langchain/: adapter.py
python/src/adapters/langchain/path_adapters/langchain/: adapter.py
python/src/nectere-sdk/: README.md  pyproject.toml
python/src/nectere-sdk/nectere/classes/: plugin_base.py  wallet_client_base.py
python/src/nectere-sdk/nectere/decorators/: tool.py
python/src/path-sdk/: README.md  pyproject.toml
python/src/path-sdk/path/classes/: plugin_base.py  wallet_client_base.py
python/src/path-sdk/path/decorators/: tool.py
python/src/plugins/coingecko/: README.md  pyproject.toml
python/src/plugins/coingecko/nectere_plugins/coingecko/: __init__.py  service.py
python/src/plugins/coingecko/path_plugins/coingecko/: __init__.py  service.py
python/src/plugins/erc20/: README.md  pyproject.toml
python/src/plugins/erc20/nectere_plugins/erc20/: __init__.py  service.py
python/src/plugins/erc20/path_plugins/erc20/: __init__.py  service.py
python/src/wallets/evm/: README.md  pyproject.toml
python/src/wallets/evm/nectere_wallets/evm/: evm_wallet_client.py  send_eth.py
python/src/wallets/evm/path_wallets/evm/: evm_wallet_client.py  send_eth.py
python/src/wallets/web3/: README.md  pyproject.toml
python/src/wallets/web3/nectere_wallets/web3/: wallet.py
python/src/wallets/web3/path_wallets/web3/: wallet.py
