[tool.poetry]
name = "path-sdk-monorepo"
version = "0.0.1"
description = "PATH (Protocol Agent Toolkit Hub) is an open-source framework for connecting AI agents to any onchain app"
authors = ["Andrea Villa <andreakarimodm@gmail.com>"]
readme = "README.md"
keywords = ["path", "sdk", "web3", "agents", "ai"]
homepage = "https://github.com/path-sdk/path"
repository = "https://github.com/path-sdk/path"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.0"
path-sdk = { path = "src/path-sdk/" }
path-sdk-plugin-coingecko = { path = "src/plugins/coingecko/" }
path-sdk-plugin-erc20 = { path = "src/plugins/erc20/" }
path-sdk-wallet-web3 = { path = "src/wallets/web3/" }
path-sdk-adapter-langchain = { path = "src/adapters/langchain/" }

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/path-sdk/path/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"
