[tool.poetry]
name = "nectere-sdk"
version = "0.1.1"
description = "Nectere is an open-source framework for connecting AI agents to any onchain app"
authors = ["Andrea Villa <andreakarimodm@gmail.com>"]
readme = "README.md"
keywords = ["nectere", "sdk", "web3", "agents", "ai"]
homepage = "https://github.com/nectere-sdk/nectere"
repository = "https://github.com/nectere-sdk/nectere"
packages = [
    { include = "nectere" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.0"
asyncio = "^3.4.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nectere-sdk/nectere/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"

[tool.ruff]
line-length = 120
target-version = "py312"
