[tool.poetry]
name = "path-sdk-plugin-erc20"
version = "0.1.0"
description = "PATH plugin for ERC20"
authors = ["Andrea Villa <andreakarimodm@gmail.com>"]
readme = "README.md"
keywords = ["path", "sdk", "web3", "agents", "ai"]
homepage = "https://github.com/path-sdk/path"
repository = "https://github.com/path-sdk/path"
packages = [
    { include = "path_plugins/erc20" },
] 

[tool.poetry.dependencies]
python = "^3.10"
path-sdk = "^0.1.0"
path-sdk-wallet-evm = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/path-sdk/path/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
path-sdk = { path = "../../path-sdk", develop = true }
path-sdk-wallet-evm = { path = "../../wallets/evm", develop = true }


[tool.ruff]
line-length = 120
target-version = "py312"
